--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </svg>
         </div>
         <div class="brand__text">
-          <div class="brand__title">Spanish Trainer</div>
+          <div class="brand__title">Spanish Trainer_v3</div>
           <div class="brand__sub">мини-дуо режим 😋</div>
         </div>
       </div>
