--- a/index.html
+++ b/index.html
@@ -1,230 +1,38 @@
 <!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spanish Trainer</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <div class="app">
+  <div id="app"></div>
 
-    <header class="topbar">
-      <div class="brand">
-        <div class="brand__logo" aria-hidden="true">
-          <svg viewBox="0 0 24 24" class="ico">
-            <path d="M12 3c4.8 0 9 3.2 9 8.3C21 17.4 16.8 21 12 21S3 17.4 3 11.3C3 6.2 7.2 3 12 3Z"></path>
-            <circle cx="8.7" cy="11" r="1.6"></circle>
-            <circle cx="15.3" cy="11" r="1.6"></circle>
-            <path d="M12 13.2c1.6 0 2.7.8 3.4 1.6-.8 1.1-2 2-3.4 2s-2.6-.9-3.4-2c.7-.8 1.8-1.6 3.4-1.6Z"></path>
-          </svg>
+  <div id="modal" class="modal hidden">
+    <div class="modalCard">
+      <div class="modalTop">
+        <div>
+          <div class="modalTitle" id="modalTitle">Урок</div>
+          <div class="modalSub" id="modalSub">0/0</div>
         </div>
-        <div class="brand__text">
-          <div class="brand__title">Spanish Trainer_v3</div>
-          <div class="brand__sub">мини-дуо режим 😋</div>
-        </div>
+        <button class="iconBtn" id="modalClose">✕</button>
       </div>
 
-      <div class="stats">
-        <div class="pill" title="Опыт">
-          <span class="pill__ico">⚡</span>
-          <span id="xpValue" class="pill__val">0</span>
-        </div>
-        <div class="pill" title="Серия дней">
-          <span class="pill__ico">🔥</span>
-          <span id="streakValue" class="pill__val">0</span>
-        </div>
+      <div id="modalBody"></div>
+
+      <div class="modalBottom">
+        <button class="btnGhost" id="btnSkip">Пропустить</button>
+        <button class="btn" id="btnCheck">Проверить</button>
       </div>
-    </header>
 
-    <nav class="tabs">
-      <button class="tab tab--active" data-tab="home">🏠 Главная</button>
-      <button class="tab" data-tab="practice">🎯 Практика</button>
-      <button class="tab" data-tab="league">🏆 Лига</button>
-      <button class="tab" data-tab="vocab">📚 Словарь</button>
-    </nav>
-
-    <main class="main">
-      <!-- HOME -->
-      <section id="homeView" class="view view--active">
-        <div class="hero">
-          <div class="hero__left">
-            <h1>Учись быстро, приятно и без духоты</h1>
-            <p>Выбирай уроки по пути, набирай опыт и держи серию 😄</p>
-            <div class="hero__row">
-              <button id="continueBtn" class="btn btn--primary">Продолжить</button>
-              <button id="openLeagueChatBtn" class="btn btn--ghost">🏆 Лига в чате</button>
-            </div>
-          </div>
-
-          <div class="hero__right">
-            <div class="card card--soft">
-              <div class="card__title">Цель дня</div>
-              <div class="goal">
-                <div class="goal__bar">
-                  <div id="goalFill" class="goal__fill"></div>
-                </div>
-                <div class="goal__meta">
-                  <span id="goalText">0 / 50 XP</span>
-                  <span class="muted">стандарт</span>
-                </div>
-              </div>
-
-              <div class="mini">
-                <div class="mini__item">
-                  <div class="mini__k">Сегодня</div>
-                  <div id="todayAnswers" class="mini__v">0 ответов</div>
-                </div>
-                <div class="mini__item">
-                  <div class="mini__k">Точность</div>
-                  <div id="accuracy" class="mini__v">—</div>
-                </div>
-              </div>
-
-              <div class="mini mini--one">
-                <div class="mini__item">
-                  <div class="mini__k">Изучено слов</div>
-                  <div id="vocabCount" class="mini__v">0</div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="section-title">
-          <h2>Путь обучения</h2>
-          <span class="muted">Модули → уроки → задания</span>
-        </div>
-
-        <div id="units" class="units"></div>
-      </section>
-
-      <!-- PRACTICE -->
-      <section id="practiceView" class="view">
-        <div class="section-title">
-          <h2>Практика</h2>
-          <span class="muted">Смешанные задания и повторение слов</span>
-        </div>
-
-        <div class="grid2">
-          <div class="card card--soft">
-            <div class="card__title">Быстрая тренировка</div>
-            <p class="muted">Случайный урок + микс типов заданий.</p>
-            <button id="practiceBtn" class="btn btn--primary">Начать</button>
-          </div>
-
-          <div class="card card--soft">
-            <div class="card__title">Повторение</div>
-            <p class="muted">Повторим слова, где ты чаще ошибался.</p>
-            <button id="reviewBtn" class="btn btn--ghost">Повторить слова</button>
-          </div>
-        </div>
-      </section>
-
-      <!-- LEAGUE -->
-      <section id="leagueView" class="view">
-        <div class="section-title">
-          <h2>Лига недели</h2>
-          <span class="muted">Топ считается на стороне бота</span>
-        </div>
-
-        <div class="card card--soft">
-          <div class="card__title">Показать рейтинг</div>
-          <p class="muted">
-            Нажми кнопку — бот пришлёт топ-10 в чат (XP за текущую неделю).
-          </p>
-          <button id="leagueBtn" class="btn btn--primary">Показать в чате</button>
-        </div>
-      </section>
-
-      <!-- VOCAB -->
-      <section id="vocabView" class="view">
-        <div class="section-title">
-          <h2>Словарь</h2>
-          <span class="muted">Твои слова, прогресс и повторение</span>
-        </div>
-
-        <div class="grid2">
-          <div class="card card--soft">
-            <div class="card__title">Открыть словарь в чате</div>
-            <p class="muted">Бот покажет твои слова и статистику.</p>
-            <button id="vocabChatBtn" class="btn btn--ghost">Показать в чате</button>
-          </div>
-
-          <div class="card card--soft">
-            <div class="card__title">Список слов</div>
-            <div id="vocabList" class="vocabList"></div>
-          </div>
-        </div>
-      </section>
-
-      <!-- LESSON -->
-      <section id="lessonView" class="view">
-        <div class="lessonTop">
-          <button id="backHome" class="btn btn--ghost btn--small">← Назад</button>
-
-          <div class="progress">
-            <div class="progress__bar">
-              <div id="progressFill" class="progress__fill"></div>
-            </div>
-            <div class="progress__meta">
-              <span id="lessonTitle" class="progress__title">Урок</span>
-              <span id="stepMeta" class="muted">1 / 5</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="card card--lesson">
-          <!-- AUDIO button (if task is audio) -->
-          <div id="audioRow" class="audioRow hidden">
-            <button id="playAudioBtn" class="btn btn--ghost btn--small">🔊 Прослушать</button>
-            <span class="muted">если не звучит — браузер запретил озвучку</span>
-          </div>
-
-          <div class="prompt">
-            <div id="promptLabel" class="prompt__label">Переведи на <b>ES</b>:</div>
-            <div id="questionText" class="prompt__word">—</div>
-          </div>
-
-          <!-- MULTIPLE CHOICE -->
-          <div id="mcBlock" class="block">
-            <div id="options" class="options"></div>
-          </div>
-
-          <!-- WORD TILES -->
-          <div id="tilesBlock" class="block hidden">
-            <div class="tilesArea">
-              <div class="muted small">Собери фразу:</div>
-              <div id="built" class="built"></div>
-              <div id="tiles" class="tiles"></div>
-              <div class="row">
-                <button id="clearTilesBtn" class="btn btn--ghost btn--small">Очистить</button>
-              </div>
-            </div>
-          </div>
-
-          <!-- TEXT INPUT -->
-          <div id="inputBlock" class="block hidden">
-            <div class="muted small">Введи перевод:</div>
-            <input id="textAnswer" class="textInput" placeholder="Например: gracias" />
-          </div>
-
-          <div class="bottomRow">
-            <div id="feedback" class="feedback" aria-live="polite"></div>
-            <button id="nextBtn" class="btn btn--primary" disabled>Дальше</button>
-          </div>
-        </div>
-
-        <div class="tip">
-          💡 Подсказка: миксуем форматы, чтобы мозг реально учился, а не угадывал.
-        </div>
-      </section>
-    </main>
-
-    <div id="toast" class="toast" role="status" aria-live="polite"></div>
+      <div id="modalHint" class="hint"></div>
+    </div>
   </div>
 
-  <script src="app.js"></script>
+  <div id="toast" class="toast"></div>
+
+  <script src="./app.js"></script>
 </body>
 </html>
