duo style update

--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
       <!-- PRACTICE -->
       <section id="screenPractice" class="screen">
         <div class="taskCard" id="taskCard">
+          <!-- RESULT SHEET (как в Duolingo) -->
+<div id="resultSheet" class="resultSheet hidden">
+  <div class="resultInner">
+    <div class="resultLeft">
+      <div id="resultTitle" class="resultTitle">Потрясающе!</div>
+      <div id="resultSub" class="resultSub">+10 XP</div>
+    </div>
+
+    <button id="btnNext" class="resultBtn">ДАЛЕЕ</button>
+  </div>
+
+  <!-- сюда будем кидать конфетти -->
+  <div id="confetti" class="confetti"></div>
+</div>
+
           <div class="taskTop">
             <div class="taskLabel" id="taskLabel">НОВОЕ СЛОВО</div>
             <div class="taskTitle" id="taskTitle">Переведи предложение</div>
