Fix next button, XP/streak, add TTS and JSON import

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Чтобы работало и в браузере, и в Telegram -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.fixed.css" />
 </head>
 <body>
   <div class="app">
@@ -102,6 +102,7 @@
     </div>
 
     <button id="btnNext" class="resultBtn">ДАЛЕЕ</button>
+
   </div>
 
   <!-- сюда будем кидать конфетти -->
@@ -168,6 +169,6 @@
     </div>
   </div>
 
-  <script src="./app.js"></script>
+  <script src="./app.fixed.js"></script>
 </body>
 </html>
